--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
 	<script>
 		function playSound(note){ 
-			const audio=new Audio(`https://raw.githubusercontent.com/fuhton/piano-mp3/master/mp3/${note}.mp3`);
+			const audio=new Audio(`https://wjddbf0601.github.io/letters-project/piano-mp3/${note}.mp3`);
 			audio.currentTime=0;
 			audio.play();
 		}
